Manejo de exepciones entre Donante y Medicamento